[package]
name = "check-no-std-math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shutil = "0.1.2"
regex = "1.0"
error-chain = "0.12.4"
glob = "0.3.0"
fancy-regex = "0.11.0"


[workspace]
members = []
