[package]
name = "nostd-float-math-monitor"
version = "0.0.3"
edition = "2021"
authors = ["Liuxiaonan <xiaonan.liu@motphys.com>"]
license = "MIT"
description = "A tool to test if std float math functions are used, which can corrupt crossplatform deterministic"
readme = "README.md"
homepage = "https://github.com/liuhahapku/nostd-float-math-monitor"
repository = "https://github.com/liuhahapku/nostd-float-math-monitor"
keywords = ["std", "float", "math", "detect", "deterministic"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"
error-chain = "0.12.4"
glob = "0.3.0"
fancy-regex = "0.11.0"
clap = { version = "3", default-features = false, features = ["cargo", "std"] }
cargo_toml = "0.15.2"


[workspace]
members = []
